# data-science-template

./: .gitignore  README.md  cookiecutter.json  filters.py
filters/: __init__.py  regexp.py
hooks/: post_gen_project.py
{{cookiecutter.__directory_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
{{cookiecutter.__directory_name}}/notebooks/shareable/: README.md  explore.ipynb
{{cookiecutter.__directory_name}}/src/: __init__.py  config.py
