{%- if cookiecutter.dependency_manager == "poetry" %}
[tool.poetry]
name = "{{ cookiecutter.__directory_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.compatible_python_versions }}"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.0"
notebook = "^7.0.0"
nbstripout = "^0.7.0"
nbqa = "^1.8.0"
black = "^24.3.0"
isort = "^5.13.0"
flake8 = "^6.0.0"
flake8-bugbear = "^24.2.0"
pytest = "^8.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
{% endif %}
[tool.isort]
profile = "black"